[package]
name = "greeter_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "2.5.3"
tokio = { version = "1.26.0", features = ["full"] }
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
